package com.example.musicplayer.domain.state

class PlayingState : PlayerState {
    constructor(context: PlayerContext) : super(context)

    override val isPlaying: Boolean = true

    override fun getType(): SimpleState = SimpleState.PLAYING

    override fun onPlay() {
        playerContext.pauseAudio()
        playerContext.transitionTo(PausedState(playerContext))
    }

    override fun onNext() {
        playerContext.nextTrack()
        playerContext.startAudio()
    }

    override fun onPrev() {
        playerContext.prevTrack()
        playerContext.startAudio()
    }

    override fun onSeek(timestampMs: Float) {
        playerContext.seekTo(timestampMs)
    }

    override fun onLock() {
        playerContext.transitionTo(LockedState(playerContext, this))
    }

    override fun onPlaybackCompleted() {
        onNext()
    }
}