@startuml
!theme plain
skinparam classAttributeIconSize 0

title State Design Pattern - Android Music Player

class PlayerContext {
  - currentState: PlayerState
  - playerAudioPlayer: AudioPlayer
  + transitionTo(state: PlayerState)
  + play()
  + next()
  + prev()
  + seek(timestampMs: Float)
  + lock()
  + startAudio()
  + pauseAudio()
  + stopAudio()
  + loadSong(song: SongMetadata)
  + nextTrack()
  + prevTrack()
}

abstract class PlayerState {
  # playerContext: PlayerContext
  + {abstract} onPlay()
  + {abstract} onNext()
  + {abstract} onPrev()
  + {abstract} onSeek(timestampMs: Float)
  + {abstract} onLock()
  + {abstract} onPlaybackCompleted()
}

class IdleState {
  + onPlay()
  + onNext()
  + onPrev()
  + onSeek(timestampMs: Float)
  + onLock()
  + onPlaybackCompleted()
}

class PlayingState {
  + onPlay()
  + onNext()
  + onPrev()
  + onSeek(timestampMs: Float)
  + onLock()
  + onPlaybackCompleted()
}

class PausedState {
  + onPlay()
  + onNext()
  + onPrev()
  + onSeek(timestampMs: Float)
  + onLock()
  + onPlaybackCompleted()
}

class LockedState {
  - prevState: PlayerState
  + onPlay()
  + onNext()
  + onPrev()
  + onSeek(timestampMs: Float)
  + onLock()
  + onPlaybackCompleted()
}

note left of PlayerContext
  The Context delegates user actions
  to the current state object.
end note

note right of LockedState
  Acts as a decorator-like state.
  Ignores playback commands until unlocked,
  then restores prevState.
end note

PlayerContext o-> PlayerState : " maintains state"
PlayerState <|-- IdleState
PlayerState <|-- PlayingState
PlayerState <|-- PausedState
PlayerState <|-- LockedState

@enduml